--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.9.6",
     "monk": "^4.0.0",
     "morgan": "~1.8.1",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.4.2"
   }
 }
